--- a/css/main.css
+++ b/css/main.css
@@ -103,9 +103,14 @@ address {
 .logo {
   font-family: "Raleway";
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.1923076923;
+  font-size: 24px;
+  line-height: 1.17;
   color: var(--bg-color-button-link-logo);
+}
+@media screen and (min-width: 1220px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 .logo--black {
   color: var(--color-second-logo);
@@ -115,6 +120,7 @@ address {
 }
 
 .nav {
+  display: none;
   margin-left: 93px;
 }
 .nav__list {
@@ -140,9 +146,7 @@ address {
 }
 
 .header-contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   margin-left: auto;
 }
 .header-contact__link {
@@ -940,4 +944,137 @@ address {
 }
 .modal__form-btn:hover, .modal__form-btn:focus {
   background-color: #188CE8;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  padding: 10px 0;
+  background-color: var(--color-text-hero);
+  cursor: pointer;
+  border: none;
+  outline: none;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.phone-menu {
+  fill: currentColor;
+}
+.menu-toggle:hover .phone-menu, .menu-toggle:focus .phone-menu {
+  color: var(--bg-color-button-link-logo);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  background-color: var(--color-text-hero);
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  padding: 0;
+}
+
+.mobile-menu__link {
+  display: block;
+  font-size: 40px;
+  color: var(--color-primary);
+}
+
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.phone-icon-close {
+  fill: currentColor;
+}
+
+.menu-toggle:hover .phone-icon-close,
+.menu-toggle:focus .phone-icon-close {
+  color: var(--bg-color-button-link-logo);
+}
+
+.current-phone {
+  color: var(--bg-color-button-link-logo);
+}
+
+.header-phone-contact {
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+
+.header-phone-contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.header-phone-contact__link {
+  font-size: 34px;
+  color: #2196F3;
+}
+
+.header-phone-mail__link {
+  font-size: 24px;
+  color: #757575;
+}
+
+.header-phone-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header-phone-socials__item:not(:first-child) {
+  padding-left: 10px;
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.header-phone-socials__item:not(:last-child) {
+  padding-right: 10px;
+}
+
+.header-phone-socials__link {
+  font-size: 18px;
+  line-height: 1.22;
+  color: #2196F3;
 }/*# sourceMappingURL=main.css.map */
