--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,13 @@
 .logo {
   font-family: 'Raleway';
   font-weight: 700;
-  font-size: 26px;
-  line-height: calc(31 / 26);
+  font-size: 24px;
+  line-height: 1.17;
   color: var(--bg-color-button-link-logo);
+
+  @media screen and (min-width: 1220px){
+    font-size: 26px;
+  }
 
 
   &--black {
