--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,17 @@ address {
   display: none;
   margin-left: 93px;
 }
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+    margin-left: 87px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    margin-left: 93px;
+  }
+}
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -149,6 +160,31 @@ address {
   display: none;
   margin-left: auto;
 }
+@media screen and (min-width: 768px) {
+  .header-contact {
+    display: block;
+  }
+  .header-contact__item + .header-contact__item {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header-contact__icon {
+    margin-right: 10px;
+  }
+  .header-contact__item + .header-contact__item {
+    margin-top: 0;
+    margin-left: 50px;
+  }
+}
 .header-contact__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -156,7 +192,6 @@ address {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 32px 0;
   color: var(--color-secondary);
   font-weight: 500;
   font-size: 14px;
@@ -165,15 +200,17 @@ address {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .header-contact__link {
+    padding: 32px 0;
+  }
+}
 .header-contact__icon {
   fill: currentColor;
-  margin-right: 10px;
+  margin-right: 8px;
 }
 .header-contact__link:hover, .header-contact__link:focus {
   color: var(--bg-color-button-link-logo);
-}
-.header-contact__item + .header-contact__item {
-  margin-left: 50px;
 }
 
 .curent {
@@ -302,7 +339,13 @@ address {
 }
 
 .work {
+  display: block;
   padding-bottom: 94px;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 
 .work__title {
@@ -431,18 +474,31 @@ address {
 }
 
 .clients {
-  padding: 94px 0;
+  padding: 60px 0;
   text-align: center;
 }
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0;
+  }
+}
 .clients__title {
-  margin-bottom: 50px;
-  font-size: 36px;
-  line-height: 1.2;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.17;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: var(--portfolio-gap);
 }
 .clients__link {
@@ -455,13 +511,23 @@ address {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid currentColor;
   border-radius: 4px;
   color: var(--icon-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .clients__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    width: 170px;
+  }
 }
 .clients__icon {
   fill: currentColor;
