--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,16 +1,26 @@
 .clients {
-  padding: 94px 0;
+  padding: 60px 0;
   text-align: center;
+
+  @media screen and (min-width:1200px) {
+    padding: 94px 0;
+  }
 
 
 &__title {
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.17;
+
+  @media screen and (min-width:1200px) {
   margin-bottom: 50px;
   font-size: 36px;
-  line-height: 1.2;
+  }
 }
 
 &__list {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--portfolio-gap);
 }
 
@@ -18,12 +28,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid currentColor;
   border-radius: 4px;
   color: var(--icon-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width:768px) {
+    width: 226px;
+  }
+
+
+  @media screen and (min-width:1200px) {
+    width: 170px;
+  }
 }
 
 &__icon {
