--- a/sass/components/_header-contact.scss
+++ b/sass/components/_header-contact.scss
@@ -2,21 +2,46 @@
   display: none;
   margin-left: auto;
 
+  @media screen and (min-width: 768px) {
+    display: block;
+
+    &__item + &__item {
+      margin-top: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+
+    &__icon {
+      margin-right: 10px;
+    }
+
+    &__item + &__item {
+      margin-top: 0;
+      margin-left: 50px;
+    }
+  }
+
   &__link {
     display: flex;
     align-items: center;
-    padding: 32px 0;
     color: var(--color-secondary);
     font-weight: 500;
     font-size: 14px;
     line-height: calc(16 / 14);
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+      padding: 32px 0;
+    }
   }
 
   &__icon {
     fill: currentColor;
-    margin-right: 10px;
+    margin-right: 8px;
   }
 
   &__link:hover,
@@ -24,7 +49,4 @@
     color: var(--bg-color-button-link-logo);
   }
 
-  &__item + &__item {
-    margin-left: 50px;
-  }
 }
