--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,5 +1,10 @@
 .work {
+  display: block;
   padding-bottom: 94px;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
 
 .work__title {
