--- a/css/main.css
+++ b/css/main.css
@@ -237,26 +237,45 @@ address {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
-  height: 600px;
+  max-width: 480px;
+  height: 400px;
   margin: 0 auto;
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+    max-width: 1600px;
+    height: 600px;
+  }
 }
 .hero__title {
-  width: 696px;
+  width: 360px;
   margin: 0 auto 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3636363636;
+  font-size: 26px;
+  line-height: 1.6153846154;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--color-text-hero);
 }
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
+}
 .hero__btn {
   min-width: 216px;
   min-height: 50px;
-  padding: 10px 32px;
+  padding: 10px 24px;
   background-color: var(--bg-color-button-link-logo);
   font-family: inherit;
   font-weight: 700;
@@ -271,6 +290,11 @@ address {
   border: none;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .hero__btn {
+    padding: 10px 32px;
+  }
 }
 .hero__btn:hover, .hero__btn:focus {
   background-color: #188ce8;
@@ -339,7 +363,7 @@ address {
 }
 
 .work {
-  display: block;
+  display: none;
   padding-bottom: 94px;
 }
 @media screen and (min-width: 1200px) {
@@ -393,13 +417,26 @@ address {
 
 .team {
   background-color: var(--bg-color-secondary-button);
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding: 94px 0;
+  }
 }
 .team__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
 }
 .team > .container > .list {
   display: -webkit-box;
@@ -408,7 +445,17 @@ address {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: var(--portfolio-gap);
-  --item: 4;
+  --item: 1;
+}
+@media screen and (min-width: 768px) {
+  .team > .container > .list {
+    --item: 2;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team > .container > .list {
+    --item: 4;
+  }
 }
 
 .card {
@@ -421,7 +468,12 @@ address {
   text-align: center;
 }
 .card__content {
-  padding: 30px 0;
+  padding: 30px 0 24px;
+}
+@media screen and (min-width: 1200px) {
+  .card__content {
+    padding: 30px 0;
+  }
 }
 .card__member {
   margin-bottom: 10px;
@@ -649,16 +701,32 @@ address {
   background-color: var(--bg-color-footer);
   padding: 60px 0;
 }
-.footer__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (max-width: 1199px) {
+  .footer__box {
+    text-align: center;
+  }
 }
-.footer__first-column {
-  margin-right: 70px;
+@media screen and (min-width: 768px) {
+  .footer__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer__first-column {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__first-column {
+    margin-right: 70px;
+  }
 }
 .footer .logo {
   display: block;
@@ -673,7 +741,12 @@ address {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer .address li + li {
-  margin-top: 9px;
+  margin-top: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .footer .address li + li {
+    margin-top: 9px;
+  }
 }
 .address__contacts {
   font-style: normal;
@@ -703,6 +776,14 @@ address {
           align-items: center;
   gap: 10px;
 }
+@media screen and (max-width: 1199px) {
+  .foot {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 60px;
+  }
+}
 .foot__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -728,8 +809,10 @@ address {
   fill: currentColor;
 }
 
-.form {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .form {
+    margin-left: auto;
+  }
 }
 .form__text {
   margin-bottom: 20px;
@@ -739,9 +822,8 @@ address {
   color: var(--color-text-hero);
 }
 .form__field {
-  width: 358px;
+  width: 450px;
   padding: 14px 15px;
-  margin-right: 12px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -749,6 +831,17 @@ address {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+}
+@media screen and (min-width: 1200px) {
+  .form__field {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .form__field {
+    margin-bottom: 20px;
+  }
 }
 .form__btn {
   padding: 10px 28px;
@@ -764,6 +857,12 @@ address {
   border: none;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 1199px) {
+  .form__btn {
+    display: block;
+    margin: 0 auto;
+  }
 }
 .form__btn:hover, .form__btn:focus {
   background-color: #188ce8;
