--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,18 +3,32 @@
   padding: 60px 0;
 
 &__box {
-  display: flex;
-  align-items: baseline;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
 }
 
 &__first-column {
-  margin-right: 70px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 
 & .logo {
   display: block;
   margin-bottom: 20px;
-}
 }
 
 .address {
@@ -26,23 +40,27 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer & li+li {
-  margin-top: 9px;
-}
+  .footer & li+li {
+    margin-top: 8px;
 
-&__contacts {
+    @media screen and (min-width: 1200px) {
+      margin-top: 9px;
+    }
+  }
+
+  &__contacts {
   font-style: normal;
   line-height: calc(24 / 14);
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
 
-&__text:hover,
-&__text:focus,
-&__contacts:hover,
-&__contacts:focus {
+  &__text:hover,
+  &__text:focus,
+  &__contacts:hover,
+  &__contacts:focus {
   color: var(--bg-color-button-link-logo);
-}
+  }
 }
 
 .cta {
@@ -58,7 +76,12 @@
   align-items: center;
   gap: 10px;
 
-&__link {
+  @media screen and (max-width: 1199px) {
+    justify-content: center;
+    margin-bottom: 60px;
+  }
+
+  &__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,22 +91,24 @@
   border-radius: 50%;
   color: var(--color-text-hero);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
 
-&__link:hover,
-&__link:focus {
+  &__link:hover,
+  &__link:focus {
   background-color: var(--bg-color-button-link-logo);
-}
+  }
 
-&__icon {
+  &__icon {
   fill: currentColor;
-}
+  }
 }
 
 .form {
-  margin-left: auto;
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+  }
 
-&__text {
+  &__text {
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.14;
@@ -91,10 +116,9 @@
   color: var(--color-text-hero);
 }
 
-&__field {
-  width: 358px;
+  &__field {
+  width: 450px;
   padding: 14px 15px;
-  margin-right: 12px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
@@ -102,9 +126,18 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+
+  @media screen and (min-width: 1200px) { 
+    width: 358px;
+    margin-right: 12px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
 }
 
-&__btn {
+  &__btn {
   padding: 10px 28px;
   font-weight: 700;
   font-size: 16px;
@@ -116,14 +149,19 @@
   border-radius: 4px;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 1199px) {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
-&__btn:hover,
-&__btn:focus {
+  &__btn:hover,
+  &__btn:focus {
   background-color: #188ce8;
 }
 
-&__icon {
+  &__icon {
   margin-left: 10px;
   vertical-align: middle;
 }
