--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,31 +1,46 @@
 .hero {
   background-color: var(--bg-color-hero);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  url(../image/bg_hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/bg_hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
-  height: 600px;
+  max-width: 480px;
+  height: 400px;
   margin: 0 auto;
   text-align: center;
-  padding: 200px 0;
+  padding: 118px 0;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+    max-width: 1600px;
+    height: 600px;
+  }
 
   &__title {
-    width: 696px;
+    width: 360px;
     margin: 0 auto 30px;
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
+    font-size: 26px;
+    line-height: calc(42 / 26);
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--color-text-hero);
+
+    @media screen and (min-width: 1200px) {
+      width: 696px;
+      font-size: 44px;
+      line-height: calc(60 / 44);
+    }
   }
 
   &__btn {
     min-width: 216px;
     min-height: 50px;
-    padding: 10px 32px;
+    padding: 10px 24px;
     background-color: var(--bg-color-button-link-logo);
     font-family: inherit;
     font-weight: 700;
@@ -38,6 +53,10 @@
     border-radius: 4px;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+      padding: 10px 32px;
+    }
   }
 
   &__btn:hover,
