--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,20 +1,38 @@
 .team {
   background-color: var(--bg-color-secondary-button);
-  padding: 94px 0;
+  padding: 60px 0;
 
+  @media screen and (min-width:1200px) {
+    padding: 94px 0;
+  }
 
 &__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   text-align: center;
-  font-size: 36px;
-  line-height: calc(42 / 36);
+  font-size: 28px;
+  line-height: calc(33 / 28);
+
+  @media screen and (min-width:1200px) {
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
 
 & > .container > .list {
   display: flex;
   flex-wrap: wrap;
   gap: var(--portfolio-gap);
-  --item: 4;
+  --item: 1;
+
+  @media screen and (min-width: 768px) {
+    --item: 2;
+  }
+
+  @media screen and (min-width: 1200px) {
+    --item: 4;
+  }
 }
 }
 
@@ -27,7 +45,11 @@
 
 
 &__content {
+  padding: 30px 0 24px;
+
+    @media screen and (min-width: 1200px) {
   padding: 30px 0;
+  }
 }
 
 &__member {
