--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -32,15 +32,14 @@
 }
 
 .address {
+  &__text {
+    font-style: normal;
+    line-height: calc(24 / 14);
+    color: var(--color-text-hero);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-&__text {
-  font-style: normal;
-  line-height: calc(24 / 14);
-  color: var(--color-text-hero);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-  .footer & li+li {
+  .footer & li + li {
     margin-top: 8px;
 
     @media screen and (min-width: 1200px) {
@@ -49,17 +48,17 @@
   }
 
   &__contacts {
-  font-style: normal;
-  line-height: calc(24 / 14);
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-style: normal;
+    line-height: calc(24 / 14);
+    color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__text:hover,
   &__text:focus,
   &__contacts:hover,
   &__contacts:focus {
-  color: var(--bg-color-button-link-logo);
+    color: var(--bg-color-button-link-logo);
   }
 }
 
@@ -82,24 +81,24 @@
   }
 
   &__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  color: var(--color-text-hero);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    color: var(--color-text-hero);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__link:hover,
   &__link:focus {
-  background-color: var(--bg-color-button-link-logo);
+    background-color: var(--bg-color-button-link-logo);
   }
 
   &__icon {
-  fill: currentColor;
+    fill: currentColor;
   }
 }
 
@@ -109,60 +108,64 @@
   }
 
   &__text {
-  margin-bottom: 20px;
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--color-text-hero);
-}
+    margin-bottom: 20px;
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--color-text-hero);
+  }
 
   &__field {
-  width: 450px;
-  padding: 14px 15px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: var(--color-text-hero);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  background-color: transparent;
+    width: 100%;
+    padding: 14px 15px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: var(--color-text-hero);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: transparent;
 
-  @media screen and (min-width: 1200px) { 
-    width: 358px;
-    margin-right: 12px;
-  }
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
 
-  @media screen and (max-width: 1199px) {
-    margin-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      margin-right: 12px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 20px;
+    }
   }
-}
 
   &__btn {
-  padding: 10px 28px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  color: var(--color-text-hero);
-  background-color: var(--bg-color-button-link-logo);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 10px 28px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--color-text-hero);
+    background-color: var(--bg-color-button-link-logo);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (max-width: 1199px) {
-    display: block;
-    margin: 0 auto;
+    @media screen and (max-width: 1199px) {
+      display: block;
+      margin: 0 auto;
+    }
   }
-}
 
   &__btn:hover,
   &__btn:focus {
-  background-color: #188ce8;
-}
+    background-color: #188ce8;
+  }
 
   &__icon {
-  margin-left: 10px;
-  vertical-align: middle;
-}
+    margin-left: 10px;
+    vertical-align: middle;
+  }
 }
