--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -38,7 +38,6 @@
   }
 
   &__title {
-    width: 360px;
     margin: 0 auto 30px;
     font-weight: 900;
     font-size: 26px;
@@ -46,6 +45,10 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--color-text-hero);
+
+    @media screen and (max-width: 1199px) {
+      max-width: 360px;
+    }
 
     @media screen and (min-width: 1200px) {
       width: 696px;
