--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -26,8 +26,6 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
-  height: 609px;
   padding: 40px 39px 40px 41px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -36,6 +34,14 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width:1199px) {
+    width: 95%;
+    max-width: 450px;
+    height: 95%;
+    max-height: 609px;
+    overflow: scroll;
+  }
 
   @media screen and (min-width: 1200px) {
     width: 528px;
