--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -21,8 +21,13 @@
   }
 
   &__link {
-    display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
   }
 
   &__link:hover,
@@ -41,13 +46,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 63px 24px;
+    padding: 5px;
     font-size: 18px;
-    line-height: 1.56;
+    line-height: 1.4;
     color: #ffffff;
     background-color: rgba(33, 150, 243, 0.9);
     opacity: 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 750ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 401px) {
+      padding: 63px 24px;
+      line-height: 1.56;
+    }
   }
 
   &__link:hover &__overlay-text,
@@ -60,6 +70,10 @@
     padding: 20px 24px;
     border: 1px solid #eeeeee;
     border-top: none;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      flex-grow: 1;
+    }
   }
 
   &__title {
